<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Pocket Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_expense">Expense</string>
    <string name="action_income">Income</string>
    <string name="error_database">Database Error</string>
    <string name="error_number">Invalid Number Input</string>
    <string name="error_form">The form is not complete</string>
    <string name="error_category">Invalid Category Name</string>
    <string name="error_category_name_conflict">There is already a category with this name</string>
    <string name="error_category_color_combination">There is already a category with this letter and color combination</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="title_activity_add_expense">New Expense Transaction</string>
    <string name="title_activity_add_income">New Income Transaction</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_user_details">Profile</string>
    <string name="title_activity_categories_manager">Categories</string>
    <string name="title_activity_create_category">New Category</string>
    <string name="title_activity_version">Version</string>
    <string name="dialog_title_categories">Categories</string>
    <string name="dialog_title_currency">Currency</string>
    <string name="dialog_title_price">Price Order</string>
    <string name="dialog_title_amount">Amount order</string>
    <string name="dialog_title_about">About Us</string>
    <string name="dialog_title_caution">Caution</string>
    <string name="pref_key_general">pref_key_general</string>
    <string name="pref_key_currency">pref_key_currency</string>
    <string name="pref_key_password_settings">pref_key_password_settings</string>
    <string name="pref_key_password">pref_key_password</string>
    <string name="pref_key_pattern">pref_key_pattern</string>
    <string name="pref_key_categories">pref_key_categories</string>
    <string name="pref_key_theme">pref_key_theme</string>
    <string name="pref_key_data_settings">pref_key_data_settings</string>
    <string name="pref_key_profile">pref_key_profile</string>
    <string name="pref_key_database_settings">pref_key_database_settings</string>
    <string name="pref_key_backup_restore_settings">pref_key_backup_restore</string>
    <string name="pref_key_export">pref_key_export</string>
    <string name="pref_key_backup">pref_key_backup</string>
    <string name="pref_key_restore">pref_key_restore</string>
    <string name="pref_key_delete_income">pref_key_delete_income</string>
    <string name="pref_key_delete_expense">pref_key_delete_expense</string>
    <string name="pref_key_notification_settings">pref_key_notification_settins</string>
    <string name="pref_key_reminder">pref_key_reminder</string>
    <string name="pref_key_reminder_time">pref_key_reminder_time</string>
    <string name="pref_key_about_settings">pref_key_about_settings</string>
    <string name="pref_key_rate_app">pref_key_rate_app</string>
    <string name="pref_key_version">pref_key_version</string>
    <string name="pref_key_about">pref_key_about</string>
    <string name="pref_key_show_again">pref_key_show_again</string>
    <string name="pref_category_general">General</string>
    <string name="pref_title_currency">Currency</string>
    <string name="pref_title_password">Pattern lock</string>
    <string name="pref_title_pattern">Set startup lock pattern</string>
    <string name="pref_title_categories">Categories</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_title_reminder">Daily Reminder</string>
    <string name="pref_title_reminder_time">Reminder Time</string>
    <string name="pref_category_about">About</string>
    <string name="pref_title_rate_app">Rate App</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_data_settings">Data</string>
    <string name="pref_title_backup_restore">Backup / Restore</string>
    <string name="pref_title_backup">Backup Data</string>
    <string name="pref_title_restore">Restore data from last backup</string>
    <string name="pref_title_profile">Profile</string>
    <string name="pref_title_data">Database</string>
    <string name="pref_title_export">Export to excel</string>
    <string name="pref_title_delete_income">Delete Income History</string>
    <string name="pref_title_delete_expense">Delete Expense history</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_summary_password">Unlock app with pattern on startup</string>
    <string name="pref_summary_reminder">Let us remind you on a daily base to track your finances</string>
    <string-array name="currency_entries">
        <item>European Euro(€)</item>
        <item>American Dollar($)</item>
        <item>Japanese Yen(¥)</item>
        <item>British Pound(£)</item>
        <item>Swiss Franc(CHF)</item>
        <item>Indian Rupee(₹)</item>
    </string-array>
    <string-array name="currency_values">
        <item>€</item>
        <item>$</item>
        <item>¥</item>
        <item>£</item>
        <item>CHF</item>
        <item>₹</item>
    </string-array>
    <string name="pref_currency_default_value">€</string>
    <string name="pref_grouping_weekly">weekly</string>
    <string name="pref_grouping_monthly">monthly</string>
    <string name="pref_grouping_daily">daily</string>
    <string name="pref_grouping_none">total</string>
    <string name="text_about">The application Pocket Wallet was developed by the development team NGNG Studio
        , by Nick Stampoulis and Nick Zissis.
        \n\nLibraries used:
        \n-Google Color Picker
        \n-LetterImageView by Melnykov Oleksandr
        \n-AndroidBetterPickers by Derek Brameyer
        \n-MagnificentChart by Ahmed Sulaiman
        \n-AutofitTextView by Grantland Chew
        \n-FloatingActionButton by Melnykov Oleksandr
        \n-SmoothProgressBar by Antoine Merle
        \n\nContact us: ngngteam2014@gmail.com</string>
    <string name="dialog_text_delete_history_confirm">Delete ALL history transactions?</string>
    <string name="toast_text_password_on">Pattern lock enabled</string>
    <string name="toast_text_password_off">Pattern lock disabled</string>
    <string name="toast_text_reminder">Daily Reminder activated \n Next reminder at </string>
    <string name="string_balance">Balance :</string>
    <string name="string_savings">Savings :</string>
    <string name="text_pie_heading">This week:</string>
    <string name="legend_text_expense">Expense</string>
    <string name="legend_text_income">Income</string>
    <string name="text_no_records">No recorded transactions for the current period</string>
    <string name="text_last_expense">Last Expense</string>
    <string name="text_last_income">Last Income</string>
    <string name="close_drawer">Open Menu</string>
    <string name="open_drawer">Close Menu</string>
    <string name="category_food">Food</string>
    <string name="category_drinks">Drinks</string>
    <string name="category_leisure">Leisure</string>
    <string name="category_personal">Personal</string>
    <string name="category_health">Health</string>
    <string name="category_bills">Bills</string>
    <string name="category_transportation">Transportation</string>
    <string name="category_clothing">Clothing</string>
    <string name="category_housekeeping">Housekeeping</string>
    <string name="category_work_epsenses">Work Expenses</string>
    <string name="category_miscellaneous">Miscellaneous</string>
    <string name="category_salary">Salary</string>
    <string name="category_bonus">Bonus</string>
    <string name="textview_hint_notes">Enter some notes…</string>
    <string name="action_add_expense">Add Expense</string>
    <string name="action_add_income">Add Income</string>
    <string name="textview_headline_category">Category</string>
    <string name="textview_headline_date">Date</string>
    <string name="textview_headline_notes">Notes</string>
    <string name="headline_name">Name</string>
    <string name="headline_repeat">Repeat</string>
    <string name="day">day(s)</string>
    <string name="week">week(s)</string>
    <string name="month">month(s)</string>
    <string name="year">year(s)</string>
    <string name="forever">forever</string>
    <string name="for_">for</string>
    <string name="times">times</string>
    <string name="until">until</string>
    <string name="every">Every</string>
    <string name="textview_headline_source">Source</string>
    <string name="toast_category_deleted"> category deleted</string>
    <string name="textview_headline_category_name">Category Name</string>
    <string name="textview_hint_headline_category_name">e.g. Food</string>
    <string name="textview_headline_category_color">Color</string>
    <string name="textview_headline_category_preview">Preview Icon</string>
    <string name="action_add_category">New Category</string>
    <string name="text_ascending">Ascending</string>
    <string name="text_declining">Declining</string>
    <string name="textview_headline_username">Username</string>
    <string name="textview_headline_savings">Initial Money</string>
    <string name="textview_headline_grouping">Grouping</string>
    <string name="dialog_delete_category_text">There are items of this category in your history. Delete or move them to another category.</string>
    <string name="dialog_delete_category_move">Move To</string>
    <string name="text_reminder_message">Track your transactions</string>
    <string name="text_reminder_content">Don\'t forget to record your daily transactions</string>
    <string name="filter_category">By Category</string>
    <string name="filter_price">By Price</string>
    <string name="filter_date">By Date</string>
    <string name="filter_date_to_date">By period</string>
    <string name="filter_recent">By Most Recent</string>
    <string name="filter_amount">By Amount</string>
    <string name="text_from">From :</string>
    <string name="text_to">To :</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="color_swatch_description">Color <xliff:g example="14" id="color_index">%1$d</xliff:g></string>
    <string name="color_swatch_description_selected">Color <xliff:g example="14" id="color_index">%1$d</xliff:g> selected</string>
    <string name="text_filter">Filters</string>
    <string name="toast_savings">You can\'t change the stock savings value because you have transactions in your history</string>
    <string name="text_today">Today</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="title_activity_pattern_lock">Pattern lock</string>
    <string name="textview_enter_pattern">Enter pattern to unlock :</string>
    <string name="textview_confirm_pattern">Confirm pattern :</string>
    <string name="textview_new_pattern">Enter new lock pattern :</string>
    <string name="textview_wrong_pattern">Wrong pattern , try again :</string>
    <string name="toast_pattern_changed">Pattern lock set</string>
    <string name="toast_pattern_not_chaged">Patterns don\'t match!</string>
    <string name="title_activity_bars_distribution">Income vs Expense</string>
    <string name="textview_headline_week_start">Week starts on:</string>
    <string name="pref_title_delete_recurrents">Delete recurrent transactions</string>
    <string name="pref_key_delete_recurrents">pref_key_delete_rucurrents</string>
    <string name="pref_key_delete_history">pref_key_delete_history</string>
    <string name="pref_title_delete_history">Delete history</string>
    <string name="not_set">Not Set</string>
</resources>