<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/pref_key_general"
        android:title="@string/pref_category_general">

        <ListPreference
            android:defaultValue="@string/pref_currency_default_value"
            android:dialogTitle="@string/dialog_title_currency"
            android:entries="@array/currency_entries"
            android:entryValues="@array/currency_values"
            android:key="@string/pref_key_currency"
            android:title="@string/pref_title_currency" />

        <PreferenceScreen
            android:key="@string/pref_key_password_settings"
            android:title="@string/pref_title_password">

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/pref_key_password"
                android:summary="@string/pref_summary_password"
                android:title="@string/pref_title_password" />

            <Preference
                android:dependency="@string/pref_key_password"
                android:key="@string/pref_key_pattern"
                android:title="@string/pref_title_pattern" />


        </PreferenceScreen>

        <Preference
            android:key="@string/pref_key_theme"
            android:title="@string/pref_title_theme" />


    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_key_data_settings"
        android:title="@string/pref_title_data_settings">

        <Preference
            android:key="@string/pref_key_profile"
            android:title="@string/pref_title_profile" />

        <PreferenceScreen
            android:key="@string/pref_key_database_settings"
            android:title="@string/pref_title_data">

            <Preference
                android:key="@string/pref_key_delete_history"
                android:title="@string/pref_title_delete_history" />

            <Preference
                android:key="@string/pref_key_delete_recurrents"
                android:title="@string/pref_title_delete_recurrents" />

        </PreferenceScreen>

        <Preference
            android:key="@string/pref_key_export"
            android:title="@string/pref_title_export" />

        <PreferenceScreen
            android:key="@string/pref_key_backup_restore_settings"
            android:title="@string/pref_title_backup_restore">

            <Preference
                android:key="@string/pref_key_backup"
                android:title="@string/pref_title_backup" />

            <Preference
                android:key="@string/pref_key_restore"
                android:title="@string/pref_title_restore" />

        </PreferenceScreen>

    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_key_notification_settings"
        android:title="@string/pref_category_notifications">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_reminder"
            android:summary="@string/pref_summary_reminder"
            android:title="@string/pref_title_reminder" />
        <Preference
            android:defaultValue="00:00"
            android:dependency="@string/pref_key_reminder"
            android:key="@string/pref_key_reminder_time"
            android:title="@string/pref_title_reminder_time" />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_key_about_settings"
        android:title="@string/pref_category_about">

        <Preference
            android:key="@string/pref_key_rate_app"
            android:title="@string/pref_title_rate_app" />

        <Preference
            android:key="@string/pref_key_version"
            android:title="@string/pref_title_version" />

        <Preference
            android:key="@string/pref_key_about"
            android:title="@string/pref_title_about" />


    </PreferenceCategory>

</PreferenceScreen>