<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0.00 €"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="@dimen/text_size_main_price" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/line_seperator_solid" />


        <TextView
            style="@style/Headline"
            android:text="@string/textview_headline_category" />


        <Spinner
            android:id="@+id/sCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin_headlines" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/line_seperator_solid" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin_headlines"
            android:orientation="horizontal"
            android:weightSum="9">

            <TextView
                style="@style/Headline"
                android:layout_weight="3"
                android:text="@string/textview_headline_date" />

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:editable="false"
                android:focusable="false" />

            <ImageButton
                android:id="@+id/ibCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4" />


        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/line_seperator_solid" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin_headlines"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                style="@style/Headline"
                android:layout_weight="3"
                android:text="@string/textview_headline_notes" />

            <EditText
                android:id="@+id/etNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/textview_hint_notes"
                android:ellipsize="end"
                android:lines="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCancel"
                style="@style/ButtonStyleBottom"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/bOK"
                style="@style/ButtonStyleBottom"
                android:text="@string/button_ok" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>