<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView"
                    style="@style/Headline"
                    android:text="@string/textview_headline_username" />

                <TextView

                    android:id="@+id/textView2"
                    style="@style/Headline"
                    android:text="@string/textview_headline_savings" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/Headline"
                    android:text="@string/textview_headline_grouping" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etUsername"
                    style="@style/UserDetailsEditText"
                    android:inputType="textPersonName"
                    android:layout_marginBottom="@dimen/bottom_margin_headlines_small" />

                <EditText
                    android:id="@+id/etSavings"
                    style="@style/UserDetailsEditText"
                    android:inputType="numberDecimal"
                    android:layout_marginBottom="@dimen/bottom_margin_headlines_small" />

                <RadioGroup
                    android:id="@+id/rgGrouping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="@dimen/bottom_margin_headlines_small">

                    <RadioButton
                        android:id="@+id/rbWeekly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="Weekly"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rbMonthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Monthly"
                        android:textSize="20sp" />
                </RadioGroup>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCancel"
                style="@style/ButtonStyleBottom"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/bOk"
                style="@style/ButtonStyleBottom"
                android:text="@string/button_ok" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>