<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        android:paddingBottom="48dp"
        android:paddingLeft="@dimen/layout_padding"
        android:paddingRight="@dimen/layout_padding"
        android:paddingTop="@dimen/layout_padding"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0.00 €"
                android:textColor="?textCustomColor"
                android:textSize="@dimen/text_size_main_price" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="@dimen/bottom_margin_headlines_small"
                android:background="@drawable/line_seperator_solid" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_margin_headlines_small"
                android:weightSum="6">

                <me.grantland.widget.AutofitTextView
                    style="@style/Headline"
                    android:layout_weight="3.5"
                    android:text="@string/headline_name" />

                <EditText
                    android:id="@+id/etCatName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:textColor="?textCustomColor" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="@dimen/bottom_margin_headlines_small"
                android:background="@drawable/line_seperator_solid" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_margin_headlines_small"
                android:weightSum="6">

                <me.grantland.widget.AutofitTextView
                    style="@style/Headline"
                    android:layout_weight="3.5"
                    android:text="@string/textview_headline_category" />

                <Spinner
                    android:id="@+id/sCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:scrollbars="none" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="@dimen/bottom_margin_headlines_small"
                android:background="@drawable/line_seperator_solid" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_margin_headlines"
                android:orientation="horizontal"
                android:weightSum="6">

                <me.grantland.widget.AutofitTextView
                    style="@style/Headline"
                    android:layout_weight="3.5"
                    android:text="@string/textview_headline_date" />

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:editable="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:textColor="?textCustomColor" />


            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="@dimen/bottom_margin_headlines_small"
                android:background="@drawable/line_seperator_solid" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_margin_headlines"
                android:orientation="horizontal"
                android:weightSum="9">

                <me.grantland.widget.AutofitTextView
                    style="@style/Headline"
                    android:layout_gravity="center"
                    android:layout_weight="2.5"
                    android:text="@string/headline_repeat" />


                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tvRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.7"
                    android:gravity="center"
                    android:lines="2"
                    android:text="@string/not_set"
                    android:textColor="?textCustomColor" />

                <ImageButton
                    android:id="@+id/ibRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.8"
                    android:src="@android:drawable/ic_menu_edit" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bCancel"
            style="@style/ButtonStyleBottom"
            android:background="@color/bpRed"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/bOK"
            style="@style/ButtonStyleBottom"
            android:background="@color/YellowGreen"
            android:text="@string/button_ok" />

    </LinearLayout>


</RelativeLayout>